@@ -1,2 +1,1 @@
-DIST jbox-gitolite-1.1.11.gem 29696 SHA256 497df86de0cf7f377b8ff237113e695f11c63d1cc0b5f11c53f094a5180f496b SHA512 d0cc6fa6a71eada6c6c80484e80da9a5a03e8a9532cc2e56a402bb62ef032999c42c770a71bd2438f26d0905368ee9e7f9449ba1c908805a8ca43c562d45abd8 WHIRLPOOL dbec8d9070366302e3fb6775842a7229557551531c27f3a6dcc95e1e6d456dfeba56245c7d698fc07908f8d4915c240b77afc673e04428f08a76c6385de51552
 DIST jbox-gitolite-1.2.2.gem 29184 SHA256 6b15e55fb457e9d2f10d54e526c2d3b274344b9a33a64c550257e3176533de35 SHA512 3d64dfa2cb06d07e9f3c187ae19df38d228085aa93ee52c7ca1d913b3ca7744b136a4ea22761de68b0cde1ef57e6bd028f5f96a6cab36adc09a6598b784cc6f4 WHIRLPOOL 1a20778e104e06a883749c9ce8772ada56848623ee7138bf20fb39e582ba49698a0de7a6e7e9782633d539daa7de702768f3cf15a801b8aebd231e311b48e005
