@@ -1,3 +1,6 @@
+  28 Jun 2014; Manuel Rüger <mrueg@gentoo.org> -jbox-gitolite-1.1.11.ebuild:
+  [dev-ruby/jbox-gitolite] Cleanup old.
+
 *jbox-gitolite-1.2.2 (30 May 2014)
 
   30 May 2014; Manuel Rüger <mrueg@gentoo.org> +jbox-gitolite-1.2.2.ebuild:
